# skill-bill

./: .gitignore  .mcp.json  AGENTS.md  README.md  RELEASING.md  install.sh  pyproject.toml  uninstall.sh
.claude-plugin/: plugin.json
.feature-specs/SKILL-10-feature-implement-agentic/: spec.md
.feature-specs/SKILL-11-telemetry-contract-sidecar/: spec.md
.feature-specs/SKILL-8-opencode-agent-support/: spec.md
.feature-specs/agent-config-review/: spec.md
.feature-specs/install-prefix-aliases/: spec.md
.feature-specs/mcp-server/: spec.md
.feature-specs/pr-template-preference/: spec.md
.feature-specs/review-acceptance-metrics/: spec.md
.feature-specs/review-learnings-application/: spec.md
.feature-specs/runtime-package-migration/: spec.md
.github/: release.yml
.github/agents/: bill-plan.agent.md  (+3 more)
agent/: history.md
docs/: ROADMAP.md  agent-runtime-lessons.md  review-telemetry.md
scripts/: skill_repo_contracts.py  validate_agent_configs.py  validate_release_ref.py
skill_bill/: __main__.py  cli.py  config.py  constants.py  db.py  feature_implement.py  feature_verify.py  learnings.py  mcp_server.py  output.py  pr_description.py  quality_check.py  review.py  stats.py  sync.py  triage.py
tests/: test_feature_implement_routing_contract.py  test_feature_implement_telemetry.py  test_feature_verify_telemetry.py  test_install_script.py  test_mcp_server.py  test_mcp_stdio.py  test_pr_description_telemetry.py  test_quality_check_telemetry.py  test_review_metrics.py  test_uninstall_script.py  test_validate_agent_configs_e2e.py  test_validate_release_ref.py
(+94 files in other folders)
