[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-bill"
version = "0.1.0"
description = "Local-first review telemetry CLI for Skill Bill."
requires-python = ">=3.10"
dependencies = ["mcp"]

[tool.setuptools.packages.find]
include = ["skill_bill*"]

[project.scripts]
skill-bill = "skill_bill.cli:main"
skill-bill-mcp = "skill_bill.mcp_server:main"
